<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_cover"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".sign_up">

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="550dp"
        app:cardBackgroundColor="#99FFFFFF"
        app:cardElevation="0dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Brand_Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aladin_regular"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:text="@string/brand_name" />

                <Button
                    android:id="@+id/Login_Inst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_medium"
                    android:background="@color/transparent"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp"
                    android:text="@string/login_label" />

            </LinearLayout>

            <TextView
                android:id="@+id/SignUp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/playfairdisplay_medium"
                android:gravity="center_vertical"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/FirstName_EditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/LastName_EditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/last_name_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <EditText
                android:id="@+id/Email_EditText_SignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/playfairdisplay_regular"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textColorHint="@color/hint_color"
                android:drawableStart="@drawable/at_sign"
                />

            <EditText
                android:id="@+id/Password_EditText_SignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textColorHint="@color/hint_color"
                android:drawableStart="@drawable/key"
                android:drawableEnd="@drawable/eye"
                />

            <Button
                android:id="@+id/SignUp_Btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                android:backgroundTint="#5CFFFFFF"
                android:text="@string/sign_up_btn"
                android:fontFamily="@font/playfairdisplay_bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>