<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_splash"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login">


    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="500dp"
        app:cardBackgroundColor="#99FFFFFF"
        app:cardElevation="0dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aladin_regular"
                    android:text="@string/brand_name"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/SignUp_Inst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/playfairdisplay_medium"
                    android:text="@string/sign_up"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp">

                <TextView
                    android:id="@+id/login_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_medium"
                    android:text="@string/login_label"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_medium"
                    android:text="Forgot Password?"
                    android:textColor="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/login_label"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/Email_EditText_Login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/drw_res_edit_text_bg"
                android:drawableStart="@drawable/ico_hint_at_sign"
                android:fontFamily="@font/playfairdisplay_regular"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />

            <EditText
                android:id="@+id/Password_EditText_Login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/drw_res_edit_text_bg"
                android:drawableStart="@drawable/key"
                android:drawableEnd="@drawable/ico_hint_eye"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_sign_in_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="190dp"
                    android:layout_height="60dp"
                    app:cornerRadius="24dp"
                    android:text="Sign in with Google"
                    android:textColor="@android:color/black"
                    app:icon="@drawable/ico_google_logo"
                    app:iconGravity="textStart"
                    app:strokeColor="@android:color/darker_gray" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:backgroundTint="#5CFFFFFF"
                    android:fontFamily="@font/playfairdisplay_bold"
                    android:text="@string/login_btn"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>